--- a/y20a_dev/res/layout/signal_lamp.xml
+++ b/y20a_dev/res/layout/signal_lamp.xml
@@ -8,36 +8,29 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <Button
-            android:id="@+id/led_test_btn"
+            android:id="@+id/led_chest"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="40sp"
-            android:text="@string/start_text"/>
+			android:textSize="40sp"
+            android:text="@string/breath_text"/>
         <Button
-            android:id="@+id/led_close"
+            android:id="@+id/led_ear"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="40sp"
-            android:text="@string/close_text"/>
+			android:textSize="40sp"
+            android:text="@string/ear_text"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
         <TextView
-            android:id="@+id/ear_tv"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:textSize="30sp"/>
-        <TextView
-            android:id="@+id/chest_tv"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:textSize="30sp"/>
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+		android:gravity="center"
+        android:textSize="40sp"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="fill_parent"
