--- a/res/layout/act_switch_urgencybutton.xml
+++ b/res/layout/act_switch_urgencybutton.xml
@@ -3,38 +3,27 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <Button
-            android:id="@+id/btn_auto_charge_on"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:textSize="20sp"
-            android:layout_height="wrap_content"
-            android:text="@string/auto_charge_on"/>
-        <Button
-            android:id="@+id/btn_auto_charge_off"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:textSize="20sp"
-            android:layout_height="wrap_content"
-            android:text="@string/auto_charge_off"/>
-    </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
+        android:gravity="top"
+        android:orientation="horizontal" >
+
+        <Button
+            android:id="@+id/btn_start_test"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="30sp"
-            android:text="@string/auto_charge_txt"/>
+            android:layout_weight="1"
+            android:text="@string/urgency_start"/>
+
     </LinearLayout>
 
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/description_switch"
+        android:textSize="20dp" />
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -43,19 +32,21 @@
         android:orientation="horizontal" >
 
         <Button
+            android:id="@+id/button001_activity_urgency"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="button001"
             android:text="@string/Success"
-            android:textSize="40.0dip" />
+            android:textSize="25.0dip" />
         <Button
+            android:id="@+id/button002_activity_urgency"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="button002"
             android:text="@string/Failed"
-            android:textSize="40.0dip" />
+            android:textSize="25.0dip" />
     </LinearLayout>
 
 </LinearLayout>
