--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -8,6 +8,8 @@
         android:id="@+id/button001_activity_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="80dp"
+        android:layout_marginRight="80dp"
         android:onClick="button001"
         android:text="@string/click_here"
         android:textColor="#f0f0f0" />
@@ -16,6 +18,8 @@
         android:id="@+id/button002_activity_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="80dp"
+        android:layout_marginRight="80dp"
         android:onClick="button002"
         android:text="@string/click_here2"
         android:textColor="#f0f0f0" />
