--- a/res/layout/activity_touch.xml
+++ b/res/layout/activity_touch.xml
@@ -44,159 +44,81 @@
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:background="#000000" />
+		<!--
 		
-		
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-            <TextView
-                android:id="@+id/txt_head_left"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="1dp"
-                android:layout_weight="1"
-                android:background="#ff0000"
-                android:text="@string/touch_head_left"
-                android:textColor="#000000"
-                android:textSize="20dp" />
-
-            <TextView
-                android:id="@+id/txt_head_right"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="1dp"
-                android:layout_weight="1"
-                android:background="#ff0000"
-                android:text="@string/touch_head_right"
-                android:textColor="#000000"
-                android:textSize="20dp" />
-            <TextView
-                android:id="@+id/txt_ear_left"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="1dp"
-                android:layout_weight="1"
-                android:background="#ff0000"
-                android:text="@string/touch_ear_left"
-                android:textColor="#000000"
-                android:textSize="20dp" />
-
-            <TextView
-                android:id="@+id/txt_ear_right"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="1dp"
-                android:layout_weight="1"
-                android:background="#ff0000"
-                android:text="@string/touch_ear_right"
-                android:textColor="#000000"
-                android:textSize="20dp" />
-        </LinearLayout>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal" >
 
             <TextView
-                android:id="@+id/txt_shoulder_left"
+                android:id="@+id/textview000_activity_touch"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="1dp"
                 android:layout_weight="1"
                 android:background="#ff0000"
-                android:text="@string/touch_shoulder_left"
-                android:textColor="#000000"
-                android:textSize="20dp" />
-
-            <TextView
-                android:id="@+id/txt_shoulder_right"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="1dp"
-                android:layout_weight="1"
-                android:background="#ff0000"
-                android:text="@string/touch_shoulder_right"
-                android:textColor="#000000"
-                android:textSize="20dp" />
-            <TextView
-                android:id="@+id/txt_arm_left"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="1dp"
-                android:layout_weight="1"
-                android:background="#ff0000"
-                android:text="@string/touch_arm_left"
-                android:textColor="#000000"
-                android:textSize="20dp" />
-
-            <TextView
-                android:id="@+id/txt_arm_right"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="1dp"
-                android:layout_weight="1"
-                android:background="#ff0000"
-                android:text="@string/touch_arm_right"
-                android:textColor="#000000"
-                android:textSize="20dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-
-            <TextView
-                android:id="@+id/txt_head_back"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="1dp"
-                android:layout_weight="1"
-                android:background="#ff0000"
-                android:text="@string/touch_head_back"
-                android:textColor="#000000"
-                android:textSize="20dp" />
-
-            <TextView
-                android:id="@+id/txt_head_chin"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="1dp"
-                android:layout_weight="1"
-                android:background="#ff0000"
-                android:text="@string/touch_head_chin"
-                android:textColor="#000000"
-                android:textSize="20dp" />
-            <TextView
-                android:id="@+id/txt_chest"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="1dp"
-                android:layout_weight="1"
-                android:background="#ff0000"
-                android:text="@string/touch_chest"
-                android:textColor="#000000"
-                android:textSize="20dp" />
-            <TextView
-                android:id="@+id/txt_body_infrared"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="1dp"
-                android:layout_weight="1"
-                android:background="#ff0000"
+                android:gravity="center"
                 android:text="@string/touch_middle"
                 android:textColor="#000000"
                 android:textSize="20dp" />
+        </LinearLayout>
+		
+		-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
 
+            <TextView
+                android:id="@+id/textview001_activity_touch"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="1dp"
+                android:layout_weight="1"
+                android:background="#ff0000"
+                android:text="@string/touch_head"
+                android:textColor="#000000"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/textview002_activity_touch"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="1dp"
+                android:layout_weight="1"
+                android:background="#ff0000"
+                android:text="@string/touch_back"
+                android:textColor="#000000"
+                android:textSize="20dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/textview003_activity_touch"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="1dp"
+                android:layout_weight="1"
+                android:background="#ff0000"
+                android:text="@string/touch_left"
+                android:textColor="#000000"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/textview004_activity_touch"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="1dp"
+                android:layout_weight="1"
+                android:background="#ff0000"
+                android:text="@string/touch_right"
+                android:textColor="#000000"
+                android:textSize="20dp" />
         </LinearLayout>
 
         <View
@@ -205,7 +127,7 @@
             android:background="#000000" />
 
         <TextView
-            android:id="@+id/txt_tip"
+            android:id="@+id/textview006_activity_touch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="tips......"
